import java.sql.Connection;
import java.sql.SQLException;
import java.sql.Statement;
import java.util.ArrayList;
import java.util.List;
import java.util.HashMap;

public class Wishlist {
    User user;
    TextUI textUI = new TextUI();
    Statement stmt;
    Connection conn;
    String name;
    String event;

    public Wishlist() {
        //User user, String name, String event
       /*this.user = user;
        this.name = name;
        this.event = event;*/

    }
}

